--- a/public/hung.html
+++ b/public/hung.html
@@ -23,7 +23,7 @@
         <header>
             <a href="#" class="logo">Nguyen Xuan Hung</a>
             <ul class="navmenu">
-                <li><a href="https://nha-que-di-code.vercel.app">Home</a></li>
+                <li><a href="https://web-thaytho-cuoiky.vercel.app/">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#link">Skills</a></li>
                 <li><a href="#" onclick=showContact()>Contact</a></li>
@@ -46,7 +46,7 @@
                     and i'm very passionate and dedicated to my work.</p>
                 <div class="home-btn">
                     <a href="#" class="btn">Contact Info</a>
-                    <a href="./img/cvtuan.png" download="Tuan_dang_CV.png" class="btn">Download CV</a>
+                    <a href="./img/cvtuan.png" download="Xuan_Hung_CV.png" class="btn">Download CV</a>
                 </div>
             </div>
             <div class="home-img">
