--- a/public/ngoc.html
+++ b/public/ngoc.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script>
         showContact = () => {
-            alert("0928152468");
+            alert("0867829143");
         };
     </script>
 </head>
@@ -21,7 +21,7 @@
 <body>
     <span>
         <header>
-            <a href="#" class="logo">Pham Ho Bao</a>
+            <a href="#" class="logo">Dang The Ngoc</a>
             <ul class="navmenu">
                 <li><a href="https://web-thaytho-cuoiky.vercel.app/">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -35,23 +35,22 @@
                 <div class="run-test">
                     <h1>
                         <a href="" class="typewrite" data-period="2000"
-                            data-type='[ "Hello! My name is Pham Ho Bao."," I am a Python developer " ]'
+                            data-type='[ "Hello! My name is Dang The Ngoc."," I am a Game developer " ]'
                             style="color: #000000;text-decoration: none;">
                             <span class="wrap"></span>
                         </a>
                     </h1>
                 </div>
-                <h3>Python Developer</h3>
-                <p>I'm a Python Developer from Vietnam,
+                <h3>Game Developer</h3>
+                <p>I'm a Game Developer from Vietnam,
                     and i'm very passionate and dedicated to my work.</p>
                 <div class="home-btn">
                     <a href="#" class="btn">Contact Info</a>
-                    <a href="./img/cvtuan.png" download="Ho_Bao_CV.png" class="btn">Download CV</a>
+                    <a href="./img/cvtuan.png" download="The_Ngoc_CV.png" class="btn">Download CV</a>
                 </div>
             </div>
             <div class="home-img">
-                <img src="./img/tortured-poets-department-loml-t.png" data-aos="fade-left" data-aos-duration="2000"
-                    style='opacity: 0.6;' />
+                <img src="./img/tuan.jpg" data-aos="fade-left" data-aos-duration="2000" />
             </div>
         </section>
         <div class="socials-icons">
@@ -67,7 +66,7 @@
             <div class="wrapper">
                 SKILL <br>& HOBBY
             </div>
-            <div class="name"><img src="./img/z5280600706687_4e588def6af5b0dd38024f6db9b09b82.jpg">Page of Ho Bao
+            <div class="name"><img src="./img/z5280600706687_4e588def6af5b0dd38024f6db9b09b82.jpg">Page of Tuan Minh
             </div>
             <div class="footer">
                 <h1>SKILL</h1>
@@ -75,19 +74,18 @@
                     <p>
                     <p data-aos="fade-right" data-aos-duration="2000"><i class="fas fa-hand-point-right"></i>
                         Competitiveness.</p>
-                    <p data-aos="fade-left" data-aos-duration="2000">Talented coder. </a><i
-                            class="fas fa-hand-point-left"></i></p>
+                    <p data-aos="fade-left" data-aos-duration="2000">The person who cooks the best food in the world.
+                        </a><i class="fas fa-hand-point-left"></i></p>
                     <p data-aos="fade-right" data-aos-duration="2000"><i class="fas fa-hand-point-right"></i>
-                        Flexibility
-                        in group work.</p>
-                    <p data-aos="fade-left" data-aos-duration="2000">Enjoy solving math problems. <i
-                            class="fas fa-hand-point-left"></i></p>
+                        Fast diplomacy and quick absorption of cultures.</p>
+                    <p data-aos="fade-left" data-aos-duration="2000">Manage groups or organize events in a sophisticated
+                        way. <i class="fas fa-hand-point-left"></i></p>
                     </p>
                 </div>
             </div>
             <div class="footer2">
                 <h2>HOBBY</h2>
-                <p style="margin-top: 100px; padding-bottom:50px">_Phạm Hồ Bảo_</p>
+                <p style="margin-top: 100px; padding-bottom:50px">_Đặng Thế Ngọc_</p>
             </div>
             <!-- <P></P> -->
 
@@ -106,8 +104,8 @@
             <div class="animation2" class="animation" data-aos="flip-down" data-aos-duration="2000">
                 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
                 <a href="#" class="photo">
-                    <h1>READING</h1>
-                    <img src="./img/reading.png" />
+                    <h1>PIANO</h1>
+                    <img src="./img/cach-tu-hoc-dan-piano-co-ban-tai-nha-1.webp" />
                     <div class="glow-wrap">
                         <i class="glow"></i>
                     </div>
