--- a/public/ngoc.html
+++ b/public/ngoc.html
@@ -46,7 +46,7 @@
                     and i'm very passionate and dedicated to my work.</p>
                 <div class="home-btn">
                     <a href="#" class="btn">Contact Info</a>
-                    <a href="./img/cvtuan.png" download="The_Ngoc_CV.png" class="btn">Download CV</a>
+                    <a href="./img/dang the ngoc-1.png" download="The_Ngoc_CV.png" class="btn">Download CV</a>
                 </div>
             </div>
             <div class="home-img">
