--- a/public/bao.html
+++ b/public/bao.html
@@ -23,7 +23,7 @@
         <header>
             <a href="#" class="logo">Pham Ho Bao</a>
             <ul class="navmenu">
-                <li><a href="https://web-thaytho-cuoiky.vercel.app/">Home</a></li>
+                <li><a href="https://isv2017-cv-final.vercel.app/">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#link">Skills</a></li>
                 <li><a href="#" onclick=showContact()>Contact</a></li>
@@ -51,7 +51,7 @@
             </div>
             <div class="home-img">
                 <img src="./img/tortured-poets-department-loml-t.png" data-aos="fade-left" data-aos-duration="2000"
-                    style='opacity: 0.6;' />
+                    style='opacity: 0.6;border-radius: 10px;' />
             </div>
         </section>
         <div class="socials-icons">
