--- a/public/hung.html
+++ b/public/hung.html
@@ -23,7 +23,7 @@
         <header>
             <a href="#" class="logo">Nguyen Xuan Hung</a>
             <ul class="navmenu">
-                <li><a href="https://web-thaytho-cuoiky.vercel.app/">Home</a></li>
+                <li><a href="https://isv2017-cv-final.vercel.app/">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#link">Skills</a></li>
                 <li><a href="#" onclick=showContact()>Contact</a></li>
