--- a/public/hung.html
+++ b/public/hung.html
@@ -50,14 +50,14 @@
                 </div>
             </div>
             <div class="home-img">
-                <img src="./img/tuan.jpg" data-aos="fade-left" data-aos-duration="2000" />
+                <img src="./img/hung.png" data-aos="fade-left" data-aos-duration="2000" />
             </div>
         </section>
         <div class="socials-icons">
-            <a target="_blank" href=""><i class="ph-bold ph-instagram-logo"></i></a>
-            <a target="_blank" href="https://www.facebook.com/Azure.abalone"><i
-                    class="ph-bold ph-facebook-logo"></i></a>
-            <a target="_blank" href="https://github.com/AzureAbalone"><i class="ph-bold ph-github-logo"></i></a>
+            <a target="_blank" href="https://www.instagram.com/_u/gnuh.31oct"><i
+                    class="ph-bold ph-instagram-logo"></i></a>
+            <a target="_blank" href="https://www.facebook.com/gnuh.31oct"><i class="ph-bold ph-facebook-logo"></i></a>
+            <a target="_blank" href="https://github.com/gnuh31oct/"><i class="ph-bold ph-github-logo"></i></a>
         </div>
         <a href="#link" class="scroll-btn">Scroll down<i class="fas fa-level-down-alt" style="padding-left: 7px;"></i>
 
@@ -66,7 +66,7 @@
             <div class="wrapper">
                 SKILL <br>& HOBBY
             </div>
-            <div class="name"><img src="./img/z5280600706687_4e588def6af5b0dd38024f6db9b09b82.jpg">Page of Tuan Minh
+            <div class="name"><img src="./img/z5280600706687_4e588def6af5b0dd38024f6db9b09b82.jpg">Page Xuan Hung
             </div>
             <div class="footer">
                 <h1>SKILL</h1>
