--- a/public/ngoc.html
+++ b/public/ngoc.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="home-img">
-                <img src="./img/tuan.jpg" data-aos="fade-left" data-aos-duration="2000" />
+                <img src="./img/ngoc.png" data-aos="fade-left" data-aos-duration="2000" style='opacity: 0.7;' />
             </div>
         </section>
         <div class="socials-icons">
@@ -66,7 +66,7 @@
             <div class="wrapper">
                 SKILL <br>& HOBBY
             </div>
-            <div class="name"><img src="./img/z5280600706687_4e588def6af5b0dd38024f6db9b09b82.jpg">Page of Tuan Minh
+            <div class="name"><img src="./img/z5280600706687_4e588def6af5b0dd38024f6db9b09b82.jpg">Page of The Ngoc
             </div>
             <div class="footer">
                 <h1>SKILL</h1>
@@ -74,12 +74,12 @@
                     <p>
                     <p data-aos="fade-right" data-aos-duration="2000"><i class="fas fa-hand-point-right"></i>
                         Competitiveness.</p>
-                    <p data-aos="fade-left" data-aos-duration="2000">The person who cooks the best food in the world.
+                    <p data-aos="fade-left" data-aos-duration="2000">Sports spirit.
                         </a><i class="fas fa-hand-point-left"></i></p>
                     <p data-aos="fade-right" data-aos-duration="2000"><i class="fas fa-hand-point-right"></i>
-                        Fast diplomacy and quick absorption of cultures.</p>
-                    <p data-aos="fade-left" data-aos-duration="2000">Manage groups or organize events in a sophisticated
-                        way. <i class="fas fa-hand-point-left"></i></p>
+                        High diplomacy and discipline.</p>
+                    <p data-aos="fade-left" data-aos-duration="2000">Adapt rapidly to a new environment. <i
+                            class="fas fa-hand-point-left"></i></p>
                     </p>
                 </div>
             </div>
@@ -104,8 +104,8 @@
             <div class="animation2" class="animation" data-aos="flip-down" data-aos-duration="2000">
                 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
                 <a href="#" class="photo">
-                    <h1>PIANO</h1>
-                    <img src="./img/cach-tu-hoc-dan-piano-co-ban-tai-nha-1.webp" />
+                    <h1>SPORT</h1>
+                    <img src="./img/sports.png" />
                     <div class="glow-wrap">
                         <i class="glow"></i>
                     </div>
