--- a/public/tung.html
+++ b/public/tung.html
@@ -66,7 +66,7 @@
             <div class="wrapper">
                 SKILL <br>& HOBBY
             </div>
-            <div class="name"><img src="./img/z5280600706687_4e588def6af5b0dd38024f6db9b09b82.jpg">Page of Tuan Minh
+            <div class="name"><img src="./img/z5280600706687_4e588def6af5b0dd38024f6db9b09b82.jpg">Page Thanh Tung
             </div>
             <div class="footer">
                 <h1>SKILL</h1>
