--- a/public/ngoc.html
+++ b/public/ngoc.html
@@ -54,10 +54,11 @@
             </div>
         </section>
         <div class="socials-icons">
-            <a target="_blank" href=""><i class="ph-bold ph-instagram-logo"></i></a>
-            <a target="_blank" href="https://www.facebook.com/Azure.abalone"><i
+            <a target="_blank" href="https://www.instagram.com/ngoc_dangthe/"><i
+                    class="ph-bold ph-instagram-logo"></i></a>
+            <a target="_blank" href="https://www.facebook.com/profile.php?id=100034993453944"><i
                     class="ph-bold ph-facebook-logo"></i></a>
-            <a target="_blank" href="https://github.com/AzureAbalone"><i class="ph-bold ph-github-logo"></i></a>
+            <a target="_blank" href="https://github.com/DangTheNgoc"><i class="ph-bold ph-github-logo"></i></a>
         </div>
         <a href="#link" class="scroll-btn">Scroll down<i class="fas fa-level-down-alt" style="padding-left: 7px;"></i>
 
