--- a/public/hung.html
+++ b/public/hung.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="home-img">
-                <img src="./img/hung.png" data-aos="fade-left" data-aos-duration="2000" />
+                <img src="./img/hung.png" data-aos="fade-left" data-aos-duration="2000" style='opacity: 0.6;' />
             </div>
         </section>
         <div class="socials-icons">
