--- a/public/hung.html
+++ b/public/hung.html
@@ -115,8 +115,8 @@
             <div class="animation3" class="animation" data-aos="flip-up" data-aos-duration="1000">
                 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
                 <a href="#" class="photo">
-                    <h1>Sleepy</h1>
-                    <img src="./img/Video-Sleepy-Controller-Icon-IDV-green.svg.png" />
+                    <h1>CODE</h1>
+                    <img src="./img/Video-Game-Controller-Icon-IDV-green.svg.png" />
                     <div class="glow-wrap">
                         <i class="glow"></i>
                     </div>
