--- a/public/tung.html
+++ b/public/tung.html
@@ -50,14 +50,15 @@
                 </div>
             </div>
             <div class="home-img">
-                <img src="./img/tuan.jpg" data-aos="fade-left" data-aos-duration="2000" />
+                <img src="./img/tung.webp" data-aos="fade-left" data-aos-duration="2000" style='opacity: 0.6' />
             </div>
         </section>
         <div class="socials-icons">
-            <a target="_blank" href=""><i class="ph-bold ph-instagram-logo"></i></a>
-            <a target="_blank" href="https://www.facebook.com/Azure.abalone"><i
+            <a target="_blank" href="https://www.instagram.com/tungnguyen5634/"><i
+                    class="ph-bold ph-instagram-logo"></i></a>
+            <a target="_blank" href="https://www.facebook.com/profile.php?id=100040949553444"><i
                     class="ph-bold ph-facebook-logo"></i></a>
-            <a target="_blank" href="https://github.com/AzureAbalone"><i class="ph-bold ph-github-logo"></i></a>
+            <a target="_blank" href="https://github.com/Tung31082005"><i class="ph-bold ph-github-logo"></i></a>
         </div>
         <a href="#link" class="scroll-btn">Scroll down<i class="fas fa-level-down-alt" style="padding-left: 7px;"></i>
 
@@ -104,8 +105,8 @@
             <div class="animation2" class="animation" data-aos="flip-down" data-aos-duration="2000">
                 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
                 <a href="#" class="photo">
-                    <h1>PIANO</h1>
-                    <img src="./img/cach-tu-hoc-dan-piano-co-ban-tai-nha-1.webp" />
+                    <h1>BADMINTON</h1>
+                    <img src="./img/badminton.jpg" />
                     <div class="glow-wrap">
                         <i class="glow"></i>
                     </div>
