--- a/public/minh.html
+++ b/public/minh.html
@@ -50,14 +50,14 @@
                 </div>
             </div>
             <div class="home-img">
-                <img src="./img/tuan.jpg" data-aos="fade-left" data-aos-duration="2000" />
+                <img src="./img/minh.png" data-aos="fade-left" data-aos-duration="2000" />
             </div>
         </section>
         <div class="socials-icons">
-            <a target="_blank" href=""><i class="ph-bold ph-instagram-logo"></i></a>
-            <a target="_blank" href="https://www.facebook.com/Azure.abalone"><i
-                    class="ph-bold ph-facebook-logo"></i></a>
-            <a target="_blank" href="https://github.com/AzureAbalone"><i class="ph-bold ph-github-logo"></i></a>
+            <a target="_blank" href="https://www.instagram.com/_.htmihn.04_"><i
+                    class="ph-bold ph-instagram-logo"></i></a>
+            <a target="_blank" href="https://www.facebook.com/ming.260904"><i class="ph-bold ph-facebook-logo"></i></a>
+            <a target="_blank" href="https://github.com/hoangtuanminhh"><i class="ph-bold ph-github-logo"></i></a>
         </div>
         <a href="#link" class="scroll-btn">Scroll down<i class="fas fa-level-down-alt" style="padding-left: 7px;"></i>
 
