--- a/public/tung.html
+++ b/public/tung.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="home-img">
-                <img src="./img/tung.webp" data-aos="fade-left" data-aos-duration="2000" style='opacity: 0.6' />
+                <img src="./img/tung.png" data-aos="fade-left" data-aos-duration="2000" style='opacity: 0.6' />
             </div>
         </section>
         <div class="socials-icons">
