--- a/public/bao.html
+++ b/public/bao.html
@@ -67,7 +67,7 @@
             <div class="wrapper">
                 SKILL <br>& HOBBY
             </div>
-            <div class="name"><img src="./img/z5280600706687_4e588def6af5b0dd38024f6db9b09b82.jpg">Page of Ho Bao
+            <div class="name"><img src="./img/z5280600706687_4e588def6af5b0dd38024f6db9b09b82.png">Page of Ho Bao
             </div>
             <div class="footer">
                 <h1>SKILL</h1>
