--- a/public/tung.html
+++ b/public/tung.html
@@ -21,9 +21,9 @@
 <body>
     <span>
         <header>
-            <a href="#" class="logo">Nguyen Thanh Tung</a>
+            <a href="" class="logo">Nguyen Thanh Tung</a>
             <ul class="navmenu">
-                <li><a href="https://isv2017-cv-final.vercel.app/">Home</a></li>
+                <li><a href="https://azureabalone.github.io/web-cuoi-ky/">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#link">Skills</a></li>
                 <li><a href="#" onclick=showContact()>Contact</a></li>
@@ -31,6 +31,7 @@
         </header>
         <section class="home">
             <div class="home-text" data-aos="fade-right" data-aos-duration="2000">
+                <!-- <h2>Hello I'm Anh Tuan </h2> -->
                 <div class="run-test">
                     <h1>
                         <a href="" class="typewrite" data-period="2000"
