--- a/public/bao.html
+++ b/public/bao.html
@@ -112,7 +112,7 @@
 								<h2 class="h2 fw-light mb-4">About Me</h2>
 								<p>Hello! I'm Pham Ho Bao. I am passionate about Web Design.
 									I am a skilled
-									<strong>front-end developer</strong> and <strong>Python developer</strong>.
+									<strong>Front-end developer</strong> and <strong>Python developer</strong>.
 									I am a quick learner and a team worker that gets the job done.
 								</p>
 								<p>I can easily capitalize on low hanging fruits and quickly
@@ -378,10 +378,9 @@
 			</div>
 		</div>
 	</footer>
-</body>
-<script src="js/mdb.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/main.js"></script>
+	<script src="js/mdb.min.js"></script>
+	<script src="js/aos.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
